    - Treat tabs (\t) as a blank space delimiter when reading coordinate 
      values in .mif file

 - Fixed sign of rotation parameters in TOWGS84 parameters in WKT.  MapInfo
   uses EPSG 9607's 7 parameter datum shift method, but TOWGS84 is defined
   to hold EPSG 9606 style parameters.  Only the rotational signs differ. NFW

 - Fixed spelling of Provisional_South_American_Datum_1956 in datum list. NFS


Version 1.2.3 - (2002-10-15)
----------------------------

- Support auto-addition of a dummy "FID" column if TAB files are created
  with no fields, instead of producing an error.  A corresponding change
  has not yet been applied to the MIF driver. NFW

- Fixed lots of places that check for errors by examining CPLGetLastErrorNo().
  A warning will trigger all these places as an error.  Changed to check that
  the last error type was CE_Failure and add a CPLErrorReset() at the 
  beginning of many affected sections.  NFW

- Modified TABGetBasename() (in mitab_utils.cpp) to stop at the first
  forward or backslash otherwise "C:/warmerda/mi\can_caps.tab" will result
  in a basename of "mi\can_caps.tab".   NFW

- Modified datum list in mitab_spatialref.cpp with a bunch of new EPSG/OGC
  datum names provided by Siro Martello from Cadcorp. NFW

- Fix memory leak of m_pszIndex in mitab_miffile.cpp, the poSpatialRef
  in TABFile::SetMIFCoordSys(), and a leak in MITABExtractCoordSysBounds(). NFW

- Added untested support in mitab_spatialref.cpp, and mitab_coordsys.cpp for 
  projections Regional Mercator (26), Polyconic (27), Azimuthal Equidistant - 
  All origin latitudes (28), and Lambert Azimuthal Equal Area - any aspect 
  (29). NFW


Version 1.2.2 - (2002-07-06)
----------------------------

- Added a validation in TABMAPFile::GetFeatureId(). When there's no .map file 
  or no spatial indexes or no geometry, the function return -1 like an Eof.
  This prevent the reading of a file set to NULL. (bug 169 (MapServer))
